# wex

./: Cargo.toml  README.md  flake.nix  wex.toml
crates/wex/: Cargo.toml
crates/wex/src/: config.rs  keyvalue.rs  main.rs  messaging.rs
crates/wex/wit/: deps.toml  world.wit
examples/rust/messaging/: Cargo.toml
examples/rust/messaging/src/: lib.rs
examples/rust/messaging/wit/: deps.toml  world.wit
