[workspace]
resolver = "2"
members = ["crates/*", "examples/rust/*"]

[workspace.package]
authors = ["Roman Volosatovs <rvolosatovs@riseup.net>"]
categories = ["wasm"]
edition = "2021"
homepage = "https://github.com/rvolosatovs/wex"
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/rvolosatovs/wex"

[workspace.dependencies]
anyhow = "1"
async-nats = "0.38"
bytes = "1"
clap = "4"
futures = "0.3"
humantime = "2.1"
serde = "1"
serde_json = "1"
reqwest = { version = "0.11", default-features = false }
tokio = "1"
tokio-stream = "0.1"
tokio-util = "0.7"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2"
wasi-preview1-component-adapter-provider = "27"
wasmparser = "0.220"
wasmtime = "27"
wasmtime-cli-flags = "27"
wasmtime-wasi = "27"
wasmtime-wasi-http = "27"
wit-bindgen = "0.35"
wit-component = "0.220"
